# SafeTypes

./: CMakeLists.txt  README.md  proposal.adoc
include/boost/safe_numbers/: unsigned_integers.hpp
include/boost/safe_numbers/detail/: config.hpp  type_traits.hpp  unsigned_integer_basis.hpp
test/: CMakeLists.txt  Jamfile  quick.cpp  test_construct_unsigned_type.cpp  test_unsigned_addition.cpp
